# clawdbot_copy

.evolve/: config.toml  goals.md
.evolve/constitution/: FLOW.md  RULES.md
.evolve/directives/: 20260417-044329.md
.evolve/inbox/: .collected  20260417-055543.md  20260417-055907.done.md
.evolve/journal/: JOURNAL.md
.evolve/memory/: active.md  learnings.jsonl  session_metrics.jsonl
.evolve/proposals/: 目标调整.md
.evolve/sessions/: .prompt_20260417-043201.txt  .prompt_20260417-045350.txt  .prompt_20260417-050311.txt  .prompt_20260417-051214.txt  .prompt_20260417-052244.txt  .prompt_20260417-052937.txt  .prompt_20260417-054645.txt  .prompt_20260417-055511.txt  .prompt_20260417-061130.txt  .prompt_20260417-063051.txt  (+91 more)
strategies/: clawdbot-architecture.md  frontier-tech-research.md  project-proposal.md
tools/: check_weak_assertions.sh
trajeval/: LICENSE  README.md  pyproject.toml
trajeval/tests/: conftest.py  test_batch.py  test_calibration.py  test_ci_output.py  test_cli.py  test_compare.py  test_e2e.py  test_improvement.py  test_ingester.py  test_integration.py  test_metrics.py  test_models.py  test_otlp_ingester.py  test_scorer.py  test_storage.py
trajeval/tests/fixtures/: clawdbot_session.jsonl  error_trace.json  eval_result_bad.json  eval_result_good.json  loop_trace.json  minimal_trace.json  otlp_error_trace.json  otlp_trace.json  recovery_trace.json  simple_trace.json
trajeval/trajeval/: __init__.py  __main__.py  batch.py  calibration.py  ci_output.py  cli.py  compare.py  improvement.py  ingester.py  metrics.py  models.py  scorer.py  storage.py
(+3 files in other folders)
