[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trajeval"
version = "0.1.0"
description = "Framework-agnostic agent trajectory evaluation: ingest traces, score with deterministic metrics + LLM-as-judge, output CI-ready reports."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "agent-lab" }]
keywords = ["agent", "evaluation", "trajectory", "llm", "testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "click>=8.0",
    "pydantic>=2.0",
    "rich>=13.0",
]

[project.optional-dependencies]
judge = ["anthropic>=0.40"]
stats = ["scipy>=1.11"]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "pytest-cov>=5.0",
]
all = ["trajeval[judge,stats,dev]"]

[project.scripts]
trajeval = "trajeval.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
"trajeval/improvement.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
